[metadata]
name = ASHE_table_formatting
description = a brief description
version = 0.0.1
author = LMHD
platforms = win32
classifiers =
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    ashe_table_formatting
install_requires =
    coverage
    detect-secrets == 1.0.3
    myst-parser
    pre-commit
    pytest
    detect-secrets
    python-dotenv
    Sphinx
    toml
    pandas
    numpy
    openpyxl
python_requires = >=3.6
package_dir =
    =./src
zip_safe = no
